--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,11 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="com.mobility42.azurechatr.permission.C2D_MESSAGE" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -30,12 +31,8 @@
         android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         <activity
             android:name=".ChatActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize">
         </activity>
 
         <receiver
@@ -50,11 +47,23 @@
 
         <activity
             android:name=".ListaChatActivity"
-            android:label="@string/title_activity_lista_chat" >
+            android:label="@string/title_activity_lista_chat"
+            android:configChanges="orientation|screenSize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ListaContactosActivity"
-            android:label="@string/title_activity_lista_contactos" >
+            android:label="@string/title_activity_lista_contactos"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".CrearChatActivity"
+            android:label="@string/title_activity_crear_chat"
+            android:configChanges="orientation|screenSize">
         </activity>
     </application>
 
