--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -62,6 +63,16 @@
         </activity>
         <activity
             android:name=".CrearChatActivity"
+            android:label="@string/title_activity_crear_chat"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".MemeViewer.MemeViewerActivity"
+            android:label="@string/title_activity_crear_chat"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".MemeViewer.MemeCreator"
             android:label="@string/title_activity_crear_chat"
             android:configChanges="orientation|screenSize">
         </activity>
