--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 
     <application
@@ -73,6 +75,16 @@
         </activity>
         <activity
             android:name=".MemeViewer.MemeCreator"
+            android:label="@string/title_activity_crear_chat"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".MediaBrowser"
+            android:label="@string/title_activity_crear_chat"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".BlobActivity"
             android:label="@string/title_activity_crear_chat"
             android:configChanges="orientation|screenSize">
         </activity>
